# weave-race-free-compiler

./: README.md  pyproject.toml
examples/racy/: parent_child_conflict.wv  unsynchronized_counter.wv  use_after_move.wv
examples/safe/: move_ownership.wv  mutex_counter.wv  read_only_share.wv
tests/: test_weave.py
weave/: __init__.py  ast.py  checker.py  cli.py  diagnostics.py  interleave.py  lexer.py  parser.py
